--- a/HelpMe.csproj
+++ b/HelpMe.csproj
@@ -4,4 +4,10 @@
     <TargetFramework Condition=" '$(GodotTargetPlatform)' == 'android' ">net9.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.10" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="characters\enemy\" />
+  </ItemGroup>
 </Project>
